package vetcare.model;

public enum Sexo {
    MACHO,
    HEMBRA
}
