classDiagram
    class Persona {
        <<Abstract>>
        -int id
        -String nombre
        -String telefono
        -String email
        +getId() int
        +setId(int) void
        +getNombre() String
        +setNombre(String) void
        +getTelefono() String
        +setTelefono(String) void
        +getEmail() String
        +setEmail(String) void
    }
    class Cliente {
        -String direccion
        -List~Integer~ idsMascotas
        +getDireccion() String
        +setDireccion(String) void
        +getIdsMascotas() List
        +agregarMascota(int) void
        +toString() String
    }
    class Mascota {
        -int id
        -String nombre
        -String especie
        -String raza
        -int edad
        -Sexo sexo
        -int idDueno
    }
    class Sexo {
        <<Enumeration>>
        MACHO
        HEMBRA
    }
    class Cita {
        -int id
        -int idMascota
        -String fecha
        -String hora
        -String motivo
        -String diagnostico
        -String estado
        +ESTADO_PROGRAMADA String
        +ESTADO_COMPLETADA String
        +ESTADO_CANCELADA String
    }
    class Veterinaria {
        -List~Cliente~ clientes
        -List~Mascota~ mascotas
        -List~Cita~ citas
        -Map~Integer~Cliente~ mapaClientes
        -Map~Integer~Mascota~ mapaMascotas
        -Map~Integer~Cita~ mapaCitas
        +getInstancia() Veterinaria
        +agregarCliente(Cliente) void
        +buscarCliente(int) Cliente
        +getClientes() List
        +agregarMascota(Mascota) void
        +buscarMascota(int) Mascota
        +getMascotas() List
        +agregarCita(Cita) void
        +buscarCita(int) Cita
        +getCitas() List
        +actualizarDiagnostico(int~String~) boolean
        +cancelarCita(int) boolean
    }
    class PersistenciaArchivo {
        +guardarDatos() void
        +cargarDatos() void
    }
    class VentanaPrincipal {
        -JTabbedPane tabs
        +VentanaPrincipal()
    }
    class PanelRegistroCliente
    class PanelRegistroMascota
    class PanelAgendarCita
    class PanelListarCitas
    class PanelHistorialClinico
    Persona <|-- Cliente
    Cliente "1" o-- "0..*" Mascota : tiene
    Cita "*" ..> "1" Mascota : referencia
    Cita "*" ..> "1" Cliente : referencia
    Mascota "*" --> "1" Sexo : usa
    Veterinaria "1" --> "*" Cliente : gestiona
    Veterinaria "1" --> "*" Mascota : gestiona
    Veterinaria "1" --> "*" Cita : gestiona
    PersistenciaArchivo "1" ..> "1" Veterinaria : persiste
    VentanaPrincipal "1" --> "1" PanelRegistroCliente
    VentanaPrincipal "1" --> "1" PanelRegistroMascota
    VentanaPrincipal "1" --> "1" PanelAgendarCita
    VentanaPrincipal "1" --> "1" PanelListarCitas
    VentanaPrincipal "1" --> "1" PanelHistorialClinico
    PanelRegistroCliente "*" ..> "1" Veterinaria
    PanelRegistroMascota "*" ..> "1" Veterinaria
    PanelAgendarCita "*" ..> "1" Veterinaria
    PanelListarCitas "*" ..> "1" Veterinaria
    PanelHistorialClinico "*" ..> "1" Veterinaria
